--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   jellyfin:
-    image: jellyfin/jellyfin
-    container_name: jellyfin
+    image: jellyfin/jellyfin:10.11.0-rc4
+    container_name: jellyfin-10.11
     user: 1000:1000
     ports:
       - "8096:8096" # Map port 8096 on your Mac to port 8096 in the container.
@@ -9,10 +9,11 @@ services:
       - "7359:7359/udp" # Client discovery (optional)
       - "1900:1900/udp" # DLNA (optional)
     volumes:
-      - ./jellyfin-data/config:/config
-      - ./jellyfin-data/cache:/cache
+      - ./jellyfin-data-10.11/config:/config
+      - ./jellyfin-data-10.11/cache:/cache
       - ./media/movies:/movies # You can place some movie files here for testing.
       - ./media/shows:/shows # You can place some tv/episode files here for testing.
+      - ./media/musicvideos:/musicvideos # You can place some music video files here for testing.
       - ./media/music:/music # You can place some music files here for testing.
       - ../build_output:/config/plugins/MusicTags # Mount the build output directly into the plugins directory.
     restart: "unless-stopped" 
