Added support for Jellyfin 10.11-rc5

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
           cp ./build_output/Jellyfin.Plugin.MusicTags.dll staging/
           cp images/logo.jpg staging/logo.jpg
           cd staging
-          zip -X ../Jellyfin.Plugin.MusicTags${{ github.ref_name }}.zip *
+          zip -X ../Jellyfin.Plugin.MusicTags_${{ github.ref_name }}.zip *
           cd ..
 
       - name: Create Release (auto notes from PRs)
